--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ title: 321FIT Coach Portal
 description: A portal for coaches to manage workouts for clients, with a retro terminal and lightning theme
 theme: jekyll-theme-minimal
 baseurl: ""
-url: "https://username.github.io" # Replace with your GitHub Pages URL
+url: "https://mburton89.github.io/321FIT-Website/" # Replace with your GitHub Pages URL
